--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             +39 340 98 53 600
         </div>
         
-        <a href="mailto:matteopepe1701@gmail.com?subject=Contatto%20dal%20sito" target="_blank" style="position: absolute; bottom: 50px; right: 10px; background-color: #D14836; color: white; border: none; padding: 8px 12px; border-radius: 5px; font-size: 0.8rem; display: flex; align-items: center; gap: 5px; cursor: pointer; text-decoration: none;">
+        <a href="mailto:matteopepe1701@gmail.com?subject=Richiesta%20colloquio%20conoscitivo" target="_blank" style="position: absolute; bottom: 50px; right: 10px; background-color: #D14836; color: white; border: none; padding: 8px 12px; border-radius: 5px; font-size: 0.8rem; display: flex; align-items: center; gap: 5px; cursor: pointer; text-decoration: none;">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="white">
                 <path d="M0 3v18h24v-18h-24zm21.518 2l-9.518 7.713-9.518-7.713h19.036zm-19.518 14v-11.817l10 8.104 10-8.104v11.817h-20z"/>
             </svg>
@@ -435,14 +435,15 @@
                 "university": "Sì , sono automunito. Vivo a Nichelino in provincia di Torino ma prendo in considerazione tutte le proposte , non è necessario che l'azienda sia nei dintorni , quindi sì sono disponibile sia a trasferte sia ad eventuali trasferimenti. "
             },
             skillLevels: {
-                "Microsoft 365": 90,
-                "Power Platform": 85,
-                "C# (.NET)": 50,
-                "SQL": 75,
-                "Python": 75,
-                "HTML/CSS": 80,
-                "Business Central": 75,
-                "Metodologie Agile": 90
+                "Microsoft 365": 90/100,
+                "Power Platform": 85/100,
+                "C# (.NET)": 50/100,
+                "SQL": 75/100,
+                "Python": 75/100,
+                "HTML/CSS": 80/100,
+                "Business Central": 75/100,
+                "Metodologie Agile": 90/100,
+                "TeamWork": 90/100
             }
         };
 
