--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
 
         .linkedin-btn {
             position: absolute;
-            bottom: 10px;
-            right: 10px;
+            bottom: 50px;
+            left: 300px;
             background-color: #0077b5;
             color: white;
             border: none;
@@ -369,14 +369,14 @@
             </button>
         </div>
         
-        <div style="position: absolute; bottom: 90px; right: 10px; color: white; font-size: 0.8rem; display: flex; align-items: center; gap: 5px; background-color: #4CAF50; padding: 8px 12px; border-radius: 5px; cursor: pointer; text-decoration: none;">
+        <div style="position: absolute; bottom: 50px; left: 800px; color: white; font-size: 0.8rem; display: flex; align-items: center; gap: 5px; background-color: #4CAF50; padding: 8px 12px; border-radius: 5px; cursor: pointer; text-decoration: none;">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="white">
                 <path d="M20 22.621l-3.521-6.795c-.008.004-1.974.97-2.064 1.011-2.24 1.086-6.799-7.82-4.609-8.994l2.083-1.026-3.493-6.817-2.106 1.039c-7.202 3.755 4.233 25.982 11.6 22.615.121-.055 2.102-1.029 2.11-1.033z"/>
             </svg>
             +39 340 98 53 600
         </div>
         
-        <a href="mailto:matteopepe1701@gmail.com?subject=Contatto%20dal%20sito" target="_blank" style="position: absolute; bottom: 50px; right: 10px; background-color: #D14836; color: white; border: none; padding: 8px 12px; border-radius: 5px; font-size: 0.8rem; display: flex; align-items: center; gap: 5px; cursor: pointer; text-decoration: none;">
+        <a href="mailto:matteopepe1701@gmail.com?subject=Contatto%20dal%20sito" target="_blank" style="position: absolute; bottom: 50px; left: 502px; background-color: #D14836; color: white; border: none; padding: 8px 12px; border-radius: 5px; font-size: 0.8rem; display: flex; align-items: center; gap: 5px; cursor: pointer; text-decoration: none;">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="white">
                 <path d="M0 3v18h24v-18h-24zm21.518 2l-9.518 7.713-9.518-7.713h19.036zm-19.518 14v-11.817l10 8.104 10-8.104v11.817h-20z"/>
             </svg>
@@ -394,7 +394,7 @@
     <script>
         // Data for the chatbot
         const data = {
-            welcomeMessage: "Ciao! Sono Matteo Pepe, studente ERP presso la Fondazione ITS-ICT Piemonte. Questo è il mio chatbot personale che ti permetterà di conoscermi meglio. Seleziona una categoria per iniziare.",
+            welcomeMessage: "Ciao! Sono Matteo Pepe. Questo è il mio chatbot personale che ti permetterà di conoscermi meglio. Seleziona una categoria per iniziare.",
             categories: [
                 {
                     id: "career",
@@ -679,8 +679,8 @@
 
 .theme-toggle {
     position: absolute;
-    bottom: 50px;
-    left: 10px;
+    bottom:468px;
+    left: 930px;
 }
 
 body.dark-theme {
@@ -793,4 +793,3 @@ document.getElementById('themeToggle').addEventListener('click', () => {
 
 </body>
 </html>
-
