--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 <body>
     <div class="container">
         <div class="chat-header">
-            <img src="https://i.imgur.com/zXBYDy0.jpeg" alt="Matteo Pepe" class="profile-pic" id="profile-pic">
+            <img src="https://i.imgur.com/xlz4ovc.png" alt="Matteo Pepe" class="profile-pic" id="profile-pic">
             <div class="header-info">
                 <h2>Matteo Pepe</h2>
                 <p><span class="online-indicator"></span>Online</p>
