--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
                     id: "career",
                     name: "Carriera professionale",
                     questions: [
-                        { id: "current-role", text: "Quale ruolo ricopri attualmente?" },
-                        { id: "current-work", text: "Stai attualmente lavorando? Se sì, dove?" },
+                        { id: "current-role", text: "Qual è stata la tua ultima occupazione?" },
+                        { id: "current-work", text: "Stai attualmente lavorando? },
                         { id: "experiences", text: "Quale esperienze hai maturato nelle aziende in cui hai lavorato?" },
                         { id: "jakala-role", text: "Quale ruolo e quali mansioni svolgevi presso Jakala?" },
                         { id: "intesa-role", text: "Quale ruolo e quali mansioni svolgevi presso Intesa SanPaolo Innovation Center?" },
@@ -463,8 +463,8 @@
                 }
             ],
             answers: {
-                "current-role": "Attualmente sono uno Stagista Curriculare presso Intesa San Paolo Innovation Center come parte del mio percorso formativo con ITS-ICT Piemonte, dove sto elaborando una tesi in vista del mio diploma di ERP System Developer previsto per Luglio 2025.",
-                "current-work": "Sì, attualmente lavoro come Stagista Curriculare presso Intesa San Paolo Innovation Center dal febbraio 2025. Mi occupo principalmente dello studio e dell'integrazione lato business dei database interni con la tecnologia di power platform (Power Apps). Mi sto occupando di creare delle dashboard per la visualizzazione dei dati delle Startup registrate nel db con Power BI e grafici nativi di Power Apps. Ho sviluppato poi delle macro Excel in VBA per la pulizia dei dati in Excel prima della migrazione di quest'ultimi nel database aziendale. Attualmente sto svolgendo gli UAT , test di verifica del funzionamento del database aziendale.",
+                "current-role": " A Giugno 2025 ho terminato la mia esperienza da Stagista Curriculare presso Intesa San Paolo Innovation Center come parte del mio percorso formativo con ITS-ICT Piemonte, dove ho elaborando una tesi in vista del mio diploma di ERP System Developer svolto poi i primi giorni di Luglio 2025.",
+                "current-work": "Sì, attualmente lavoro come Junior Consultant ERP - Business Central presso MySoft nella sede di Alessandria da Settembre 2025.",
                 "experiences": "Ho maturato esperienza nella logistica presso Jakala S.P.A. per circa un anno e mezzo tra il 2021 e il 2023, dove mi sono occupato della gestione delle spedizioni , della gestione delle emrci in magazzino e dell'emissione di bolle di magazzino. Attualmente sto facendo esperienza nel settore IT presso Intesa San Paolo Innovation Center, dove lavoro con database e tecnologie Microsoft. Ho imparato ,nella mia breve esperienza lavorativa, l'importanza nel farsi comprendere ; sia dai propri colleghi per evitare fraintendimenti o perdite di tempo, sia dai clienti. Mi sono spesso ritrovato a lavorare sotto pressione con delle scadenze e mi sono sempre dimostrato all'altezza garantendo i risultati tempestivamente. Se ci sono degli incarichi che non so svolgere , spesso ci provo comunque anche se commetto degli errori poichè penso che sia l'unica via per acquisire più esperienza possibile in modo costruttivo",
                 "jakala-role": "In Jakala S.P.A. ho ricoperto il ruolo di Addetto alla logistica, occupandomi della gestione delle spedizioni, dell'emissione di bolle di magazzino e delle relazioni con i clienti. Ho utilizzato il pacchetto Office(Teams, Word ed Excel in particolare) e il software SAP come utente. Ho utilizzato inoltre diverse tipolgie di stampanti per l'emissione delle bolle di magazzino : mi sono ritrovato spesso ad aggiustare o provare a gestire gli errori delle stampanti.",
                 "intesa-role": "Presso Intesa SanPaolo Innovation Center svolgo il ruolo di Stagista Curriculare, occupandomi dello studio dei database interni aziendali in Microsoft 365, dell'integrazione tra i database aziendali, della gestione dei dati delle Startup e dell'utilizzo delle tecnologie Power Platform, in particolare Power Apps.",
@@ -476,23 +476,23 @@
                 "languages": "Il mio livello di inglese è intermedio (B2), con buone capacità di lettura e scrittura (B2) e una competenza di ascolto e parlato di livello B1-B2. L'italiano è la mia lingua madre e al momento non conosco altre lingue straniere a livello professionale.",
                 
                 "ict-interest": "Mi affascina il mondo ICT per la sua costante evoluzione e la possibilità di creare soluzioni innovative. Nel settore ERP, mi interessa particolarmente come questi sistemi possano integrare i vari processi aziendali e ottimizzare le operazioni, specialmente nel campo delle tecnologie Microsoft come Business Central. Molte aziende hanno ancora oggi bisogno di sviluppare software ERP affidabili ed efficenti.",
-                "role-sector": "Sto cercando un ruolo come ERP Consultant / Sales Anlyst / Junior Developer. Mi piacerebbe lavorare in aziende orientate all'innovazione o società di consulenza IT, perché credo che questi ambienti offrano le migliori opportunità di crescita professionale e di apprendimento continuo.",
+                "role-sector": "Valuto un ruolo come ERP Consultant / Sales Anlyst / Junior Developer. Mi piacerebbe lavorare in aziende orientate all'innovazione o società di consulenza IT, perché credo che questi ambienti offrano le migliori opportunità di crescita professionale e di apprendimento continuo.",
                 "developer-role": "Vorrei assumere principalmente una figura da consulente, in particolare nell'ambito ERP, dato che il mio percorso formativo presso ITS-ICT Piemonte è focalizzato proprio sullo sviluppo e sullo studio dei processi aziendali di questi sistemi. Mi piace l'aspetto tecnico e creativo della programmazione, ma preferisco esplorare ruoli di consulenza tecnica.",
-                "job-search": "Attualmente sto completando il mio percorso formativo presso ITS-ICT Piemonte e lo stage curriculare presso Intesa San Paolo Innovation Center che si concluderà nel Luglio del 2025. Sono aperto a valutare opportunità di lavoro a tempo pieno che mi permettano di applicare e sviluppare ulteriormente le competenze acquisite nel mondo ERP.",
+                "job-search": "No, attualmente lavoro su Business Central come junior Consultant presso Mysoft nella sede di Alessandria.",
                 
                 "diploma": "Ho conseguito il Diploma di istruzione secondaria di secondo grado con indirizzo Scienze Umane Socio-Economiche presso l'I.I.S. J.C. MAXWELL di Nichelino (TO) nel luglio 2021.",
-                "current-studies": "Sì, attualmente sto studiando presso la Fondazione ITS-ICT Piemonte per diventare ERP System Developer. È un corso di livello 5 EQF che copre nozioni fondamentali sugli ERP, analisi dei requisiti, progettazione e sviluppo software, gestione progetti e tecniche di testing.",
+                "current-studies": "No, ho completato gli studi in ITS-ICT Fondazione Piemonte come ERP System developer ottenendo il diploma di tecnico superiore in ERP ad inizio Luglio 2025.",
                 "hobbies": "Nel tempo libero mi piace esplorare nuove tecnologie e fare progetti personali di programmazione come questo chatbot. Amo anche guardare video in rete relativi al business e all'innovazione tecnologica. Inoltre, apprezzo le attività all'aria aperta e passare del tempo con amici e famiglia.",
                 "university": "Sì , sono automunito. Vivo a Nichelino in provincia di Torino ma prendo in considerazione tutte le proposte , non è necessario che l'azienda sia nei dintorni , quindi sì sono disponibile sia a trasferte sia ad eventuali trasferimenti. "
             },
             skillLevels: {
                 "Microsoft 365": 90,
                 "Power Platform": 85,
-                "C# (.NET)": 50,
-                "SQL": 75,
-                "Python": 75,
+                "C# (.NET)": 20,
+                "SQL": 65,
+                "Python": 70,
                 "HTML/CSS": 80,
-                "Business Central": 75,
+                "Business Central": 90,
                 "Metodologie Agile": 90
             }
         };
