--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                     name: "Carriera professionale",
                     questions: [
                         { id: "current-role", text: "Qual è stata la tua ultima occupazione?" },
-                        { id: "current-work", text: "Stai attualmente lavorando? },
+                        { id: "current-work", text: "Stai attualmente lavorando?" },
                         { id: "experiences", text: "Quale esperienze hai maturato nelle aziende in cui hai lavorato?" },
                         { id: "jakala-role", text: "Quale ruolo e quali mansioni svolgevi presso Jakala?" },
                         { id: "intesa-role", text: "Quale ruolo e quali mansioni svolgevi presso Intesa SanPaolo Innovation Center?" },
